@@ -1,14 +1,14 @@
-a373f28fede37c04b77ca733a66e6b13 *DESCRIPTION
+3ed61774d21c8aa6838ba7920140b060 *DESCRIPTION
 9023f060a8aa0d9f16566887e1f561e7 *LICENCE.note
 559ac0624f424a67aee8844691d58994 *NAMESPACE
-8199e17b21a58076db2c24214a48fe95 *NEWS
+5c0b98fd391c9435a141d3d2453228bc *NEWS
 55659272104a9aad1734d272bd1f3a01 *R/AO.R
 2e4653d22a116710b5592407067a163c *R/clm.R
 68c2622c72a7bb94d9e3cd8f55bcf8d0 *R/clm.Thetamat.R
 014f1ea93b846e9d7664f2b2f91ee949 *R/clm.anova.R
 ff9ae04aee9fc8759e2cb94493069895 *R/clm.fit.R
 9368408f671dfd9bb25cac61008e2894 *R/clm.fitter.R
-09485337284bd0ce316bc224e5c63be5 *R/clm.frames.R
+b9d05ec3c1365b281f700a2ac74ab51b *R/clm.frames.R
 a8b9a1a9e11e5aca43abdd657778f0bd *R/clm.methods.R
 4d66bcf34d3a1468bde432214c908b6f *R/clm.nominal_test.R
 70508e68b520e5c2c6f28e9bb56edbec *R/clm.predict.R
@@ -18,7 +18,7 @@ d89cfd6e7df55d94c71dd33607b4307a *R/clm.slice.R
 753b116331b820b564f354b4cb51aec3 *R/clm.slice2D.R
 1b7edf4157bf95b16af59c0ca043f285 *R/clm.start.R
 bf8c59b40e65350ace1e75f82fd233be *R/clm2.R
-acbac5a1a4f34152182cb740fa9e9def *R/clmm.R
+4e9e9a8a4c0d9e03ea8e8172b3997cc7 *R/clmm.R
 50b4e71fd34be7d28f843b7027b62d04 *R/clmm.formula.R
 75cf4550b788c4c73bd420a40e51e69d *R/clmm.methods.R
 0076c7be4c3749aa6401c83308d68146 *R/clmm.ranef.R
@@ -37,17 +37,17 @@ e33c96829340e40bd7838024d137ab81 *R/gumbel.R
 330321bee23e85384761aa86179ea288 *R/terms_utils.R
 a6915923a4a0dfb2cac5faf57800db64 *R/utils.R
 7f89868e44455f3fded385b8b39af491 *R/warning_functions.R
-0e2e8fc4502cbe7784427a80ab3e557a *build/vignette.rds
+6f4694c039528deea0666e5b2c8a4b79 *build/vignette.rds
 63eb28b797efedb31ad1f5db75ddfa0b *data/income.rda
 de5d075c95248681323ce9e571e7d0a2 *data/soup.rda
 50b83b93508e5c5a9085d5204cb9ff09 *data/wine.rda
 73c90587f400050e6d2d177eefc1bd39 *inst/CITATION
 984e55221eaad9b2be3368cc9a282ff9 *inst/doc/clm_article.R
 d89a278169dbd268c00ad2ec9c339181 *inst/doc/clm_article.Rnw
-1ccab768188792ca03375f7c6be06c85 *inst/doc/clm_article.pdf
+1899c991cd9b9af9713794765b20aa5c *inst/doc/clm_article.pdf
 4b635c0e8e50007e29e94ab28da75f23 *inst/doc/clmm2_tutorial.R
 ddde6e9af6699c2d9c11002d12e3049e *inst/doc/clmm2_tutorial.Rnw
-4c91418cee679aa35db4e7853cbc0dc2 *inst/doc/clmm2_tutorial.pdf
+4a9c24bd81d5a914bbe973c5b6037b6c *inst/doc/clmm2_tutorial.pdf
 0dc6dd5fc752782590a85c3eab31d5fb *man/VarCorr.Rd
 4d295ce70b37b9409b0b74eb6ae7d0b2 *man/addtermOld.Rd
 fbbfa8a549ecc09ad66aa0e00d1f6d1b *man/anovaOld.Rd
