@@ -265,3 +265,7 @@ March 04 2010:
 
 2019-03-09:
 - Massage tests to check out on R-devel
+
+2019-04-25:
+- Change in formula evaluation in base R prompts this update - very kindly 
+  fixed by Martin Maechler (R core) in PR#18 
